crates/djls-project/tests/snapshots/corpus__repos__django-cms__cms__templatetags__cms_admin.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: "sorted_snapshot(&bundle).expect(\"corpus extraction snapshot should serialize\")"
---
tag_rules:
  "cms.templatetags.cms_admin::tag::admin_static_url":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Parameters: []
    as_var: strip
  "cms.templatetags.cms_admin::tag::get_page_display_name":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Parameters:
        - name: cms_page
          requirement: required
          kind: Variable
    as_var: strip
  "cms.templatetags.cms_admin::tag::render_filter_field":
    arg_constraints:
      - Min: 3
      - Max: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Parameters:
        - name: request
          requirement: required
          kind: Variable
        - name: field
          requirement: required
          kind: Variable
    as_var: keep
  "cms.templatetags.cms_admin::tag::show_admin_menu_for_pages":
    arg_constraints:
      - Min: 2
      - Max: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Parameters:
        - name: descendants
          requirement: required
          kind: Variable
        - name: depth
          requirement: optional
          kind: Variable
    as_var: strip
  "cms.templatetags.cms_admin::tag::submit_row_plugin":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Parameters: []
    as_var: keep
filter_arities:
  "cms.templatetags.cms_admin::filter::boolean_icon": no_argument
  "cms.templatetags.cms_admin::filter::placeholder_is_immutable": required_argument
block_specs: {}
