crates/djls-project/tests/snapshots/corpus__repos__django-cms__cms__templatetags__cms_alias_tags.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: "sorted_snapshot(&bundle).expect(\"corpus extraction snapshot should serialize\")"
---
definitions:
  "tag::render_alias_plugin":
    kind: tag
    has_doc: false
symbols_are_unobserved: false
tag_rules:
  "cms.templatetags.cms_alias_tags::tag::render_alias_plugin":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: instance
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
filter_arities: {}
block_specs: {}
