crates/djls-project/tests/snapshots/corpus__repos__django-cms__cms__templatetags__cms_js_tags.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: "sorted_snapshot(&bundle).expect(\"corpus extraction snapshot should serialize\")"
---
tag_rules:
  "cms.templatetags.cms_js_tags::tag::render_cms_structure_js":
    arg_constraints:
      - Min: 3
      - Max: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Parameters:
        - name: renderer
          requirement: required
          kind: Variable
        - name: obj
          requirement: required
          kind: Variable
    as_var: strip
  "cms.templatetags.cms_js_tags::tag::render_plugin_init_js":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Parameters:
        - name: plugin
          requirement: required
          kind: Variable
    as_var: strip
filter_arities:
  "cms.templatetags.cms_js_tags::filter::bool": no_argument
  "cms.templatetags.cms_js_tags::filter::json": no_argument
block_specs: {}
