crates/djls-project/tests/snapshots/corpus__repos__django-cms__cms__templatetags__cms_static.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: "sorted_snapshot(&bundle).expect(\"corpus extraction snapshot should serialize\")"
---
definitions:
  "tag::static_with_version":
    kind: tag
    has_doc: false
symbols_are_unobserved: false
tag_rules: {}
filter_arities: {}
block_specs: {}
