crates/djls-project/tests/snapshots/corpus__repos__django-cms__cms__templatetags__cms_tags.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: "sorted_snapshot(&bundle).expect(\"corpus extraction snapshot should serialize\")"
---
tag_rules:
  "cms.templatetags.cms_tags::tag::render_extra_menu_items":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: obj
            requirement: required
            kind: Variable
          - name: template
            requirement: optional
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
  "cms.templatetags.cms_tags::tag::render_plugin":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: plugin
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
  "cms.templatetags.cms_tags::tag::show_placeholder":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: placeholder_name
            requirement: required
            kind: Variable
          - name: reverse_id
            requirement: required
            kind: Variable
          - name: lang
            requirement: optional
            kind: Variable
          - name: site
            requirement: optional
            kind: Variable
          - name: use_cache
            requirement: optional
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
  "cms.templatetags.cms_tags::tag::show_placeholder_by_id":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: placeholder_name
            requirement: required
            kind: Variable
          - name: reverse_id
            requirement: required
            kind: Variable
          - name: lang
            requirement: optional
            kind: Variable
          - name: site
            requirement: optional
            kind: Variable
          - name: use_cache
            requirement: optional
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
  "cms.templatetags.cms_tags::tag::show_uncached_placeholder":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: args
            requirement: optional
            kind: VarArgs
        positional_only: 0
        variadic_keyword: kwargs
    as_var: strip
  "cms.templatetags.cms_tags::tag::show_uncached_placeholder_by_id":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: args
            requirement: optional
            kind: VarArgs
        positional_only: 0
        variadic_keyword: kwargs
    as_var: strip
filter_arities: {}
block_specs: {}
